# investment_system

./: .env.example  .gitignore  .project  docker-compose.yaml  pyproject.toml  system outline 14.01.2026.txt
backend/: README.md  alembic.ini  main.py  pyproject.toml  pytest.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c5a0442d917_add_snippet_text_to_sources.py  398163f7cb65_add_snippet_text_to_sources.py  a143eddba07b_make_extracted_raw_price_nullable.py  b2c3d4e5f6a1_create_investment_schema_tables.py  ba2e85796875_add_forecast_aggregates_and_aggregate_.py  c3d4e5f6a1b2_seed_nasdaq100_instruments.py  d1e2f3a4b5c6_make_predicted_price_nullable.py  d49c6f591ba3_make_extracted_raw_price_nullable.py
backend/config/: database.py  fetcher.py  forecast_options.py  llm.py  logging.py  settings.py
backend/database/: engine.py  session.py
backend/exceptions/: __init__.py  handlers.py
backend/routes/: fetch.py  forecasts.py  ingest.py  instrument_classes.py  instruments.py  publishers.py  system.py
backend/scripts/: fetch_sources.py
backend/src/: main.py
backend/src/clients/: serper_client.py
backend/src/ingestion/: __init__.py  auditor.py  fetch_service.py  fetch_yfinance.py  scrape_trgt.py  search_fetch_serper.py  serper_client.py
backend/src/models/: __init__.py  aggregate_component.py  forecast.py  forecast_aggregate.py  forecast_source.py  (+7 more)
backend/tests/: conftest.py  test_auditor.py  test_fetch_service.py  test_forecast_repository.py  test_forecasts.py  test_forecasts_route.py  test_ingest.py  test_instrument_classes.py  test_instruments.py  test_llm_settings.py  test_lm_broker.py  test_price_prediction.py  test_price_repository.py  test_system.py  test_yfinance_service.py
(+55 files in other folders)
