[project]
name = "Investment_system"
version = "1.0.0"
description = "Investment system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.1",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "yfinance>=1.2.0",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.37",
	"trafilatura>=1.12",
	"python-dateutil>=2.9",
	"requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
